<resources>
    <string name="app_name">ArduMacro</string>
    <string name="CoC">Coc del sensor:</string>
    <string name="Solapamiento">Margen de solapamiento (%):</string>
    <string name="Avance">Avance por rotación (mm):</string>
    <string name="Pos">Mueve el motor a la posición inicial</string>
    <string name="Sig"><![CDATA[Sig >>]]></string>
    <string name="Ant"><![CDATA[<< Ant]]></string>
    <string name="Entrada">Entrada de datos</string>
    <string name="Focal">Distancia focal objetivo (mm):</string>
    <string name="FocalExt">Distancia focal extendida (mm):</string>
    <string name="Abertura">Abertura del diafragma:</string>
    <string name="Distancia">Distancia al sujeto (mm):</string>
    <string name="Profundidad">Profundidad del sujeto (mm):</string>
    <string name="AvanceMotor">Avance</string>
    <string name="RetrocesoMotor">Retroceso</string>
    <string name="Detalles">Detalles de la sesión</string>
    <string name="Sesion">Sesión</string>
    <string name="Coc">Coc:</string>
    <string name="Pasos">Pasos por rotación:</string>
    <string name="Magnificacion">Magnificación:</string>
    <string name="Pdc">Profundidad de campo (mm):</string>
    <string name="Fotos">Número de fotos:</string>
    <string name="PasosFotos">Pasos entre fotos:</string>
    <string name="Ejecución">Ejecución</string>
    <string name="Cancelar">Cancelar sesión</string>
    <string name="Cancelada">Sesión cancelada</string>
    <string name="Continuar">Continuar sesión</string>
    <string name="Iniciar">Iniciar sesión</string>
    <string name="Pausar">Pausar sesión</string>
    <string name="Avanzando">Avanzando</string>
    <string name="Avanzar">Avanzar</string>
    <string name="Retrocediendo">Retrocediendo</string>
    <string name="Retroceder">Retroceder</string>
    <string name="Copyright">by Jocajica (2016)</string>
    <string name="Seleccionar">Seleccionar rail</string>
    <string name="Dispositivos">Buscar dispositivos</string>
    <string name="Conectar">Conectar</string>
    <string name="Conectando">Conectando</string>
    <string name="Conectado">Dispositivo conectado</string>
    <string name="Desconectado">Desconectado</string>
    <string name="BtError01">Error de conexión.</string>
    <string name="BtError02">Error de bluetooth sin identificar</string>
    <string name="BtError03">El dispositivo no dispone de Bluetooth</string>
    <string name="BtError04">No se han encontrado dispositivos</string>
    <string name="Mostrar">Mostrar dispositivos emparejados</string>
    <string name="Espere">Espere por favor!!!</string>
</resources>
