<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jocajica.ardumacro.MotorPosActivity">

    <TextView
        style="@style/TextViewTitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pos"
        android:id="@+id/textViewPos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AvanceMotor"
            android:id="@+id/toggleButtonAvance"
            android:textOn="@string/Avanzando"
            android:textOff="@string/Avanzar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/toggle_selector"
            style="@style/ButtonToggleMoverMotor" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RetrocesoMotor"
            android:id="@+id/toggleButtonRetroceso"
            android:textOn="@string/Retrocediendo"
            android:textOff="@string/Retroceder"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/toggle_selector"
            style="@style/ButtonToggleMoverMotor" />
    </LinearLayout>

    <Button
        style="@style/ButtonNavegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ant"
        android:id="@+id/buttonAnt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/ButtonNavegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sig"
        android:id="@+id/buttonSig"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
