<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfiguracionActivity">

    <TextView
        style="@style/TextViewTitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Entrada"
        android:id="@+id/textViewDatos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textViewDatos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonAnt"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CoC"
                    android:id="@+id/textViewCoC" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextCoC"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout2">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Solapamiento"
                    android:id="@+id/textViewPct" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextPct"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/linearLayout3">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Avance"
                    android:id="@+id/textViewAvance" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextAvance"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout4">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Focal"
                    android:id="@+id/textViewFocal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextFocal"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout5">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FocalExt"
                    android:id="@+id/textViewFocalExt" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextFocalExt"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout6">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Abertura"
                    android:id="@+id/textViewAbertura" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextAbertura"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout7">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Distancia"
                    android:id="@+id/textViewDistancia" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextDistancia"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout8">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Profundidad"
                    android:id="@+id/textViewProfundidad" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextProfundidad"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout9">

                <TextView
                    style="@style/TextViewEtiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pasos"
                    android:id="@+id/textViewPasos" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextPasos"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        style="@style/ButtonNavegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ant"
        android:id="@+id/buttonAnt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/ButtonNavegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sig"
        android:id="@+id/buttonSig"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
