<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jocajica.ardumacro.ConexionActivity">

    <TextView
        style="@style/TextViewTitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seleccionar"
        android:id="@+id/textViewPos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/ButtonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mostrar"
        android:id="@+id/buttonBuscar"
        android:layout_below="@+id/textViewPos"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5dp" />

    <Button
        style="@style/ButtonNavegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sig"
        android:id="@+id/buttonSig"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="false" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewDispositivos"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttonSig"
        android:layout_below="@+id/buttonBuscar"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp" />

</RelativeLayout>
